[package]
name = "appa"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
backoff = "0.4"
futures = "0.3.25"
bytes = "1.4"
blake3 = "1.3"
chrono = "0.4.24"
cid = "0.10"
clap = { version = "4.2", features = ["derive"] }
ignore = "0.4.20"
libipld = "0.16"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
rand = "0.8"
tokio = { version = "1.27.0", features = ["full"] }
wnfs = { version = "0.1.27", git = "https://github.com/wnfs-wg/rs-wnfs.git", branch = "matheus23/root-tree" }
wnfs-nameaccumulator = { git = "https://github.com/wnfs-wg/rs-wnfs.git", branch = "matheus23/root-tree", default-features = false, features = ["rug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.37"
hex = "0.4"
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.5.0"
